<resources>
    <string name="app_name">Village Development Planning</string>

    <!--others-->
    <string name="do_you_want_to_go_to_main_page">Do you want to go to the main page?</string>
    <string name="retry">Retry</string>
    <string name="no">NO</string>
    <string name="delete_snapshot">Do you want to delete %1$s?</string>
    <string name="summary">SUMMARY</string>
    <string name="yes">YES</string>
    <string name="survey_complete">This survey is complete</string>
    <string name="survey_ongoing_dialog_message">Continue with %1$s survey now? </string>
    <string name="survey_start_again_msg">Do you want to start the survey?</string>
    <string name="survey_continue_msg">Do you want to continue with the survey?</string>
    <string name="press">PRESS</string>
    <string name="tag_line">A Tamilnadu government initiative</string>
    <string name="enter_cst">Enter your CST code</string>
    <string name="survey_file_saving_msg">Saving the survey. Please wait...</string>
    <string name="loading">LOADING</string>
    <string name="deleting">DELETING</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="settings">SETTINGS</string>
    <string name="other_settings">SETTINGS</string>
    <string name="save">SAVE</string>
    <string name="record_end_gps">RECORD END POINT GPS</string>
    <string name="grant_permissions_request">Please grant permissions for the app to work. </string>
    <string name="go_to_index_page_sub_heading">Go to main page</string>
    <string name="app_primary_language">Select the primary language</string>
    <string name="enter_surveyor_code">Enter surveyor code</string>
    <string name="answers_count_title">Responses yet to be uploaded</string>
    <string name="uploaded_answers_title">Responses uploaded successfully</string>

    <!--success-->
    <string name="gps_recorded_successfully">GPS recorded successfully</string>
    <string name="save_successful">Save successful</string>

    <!--errors-->
    <string name="auth_error">Authentication error.</string>
    <string name="survey_code_invalid">Surveyor code not valid</string>
    <string name="invalid_ui">Invalid UI provided</string>
    <string name="error_deleting_file">Error deleting the file!</string>
    <string name="fatal_error">Fatal error. Please go to settings and clear cached data.</string>
    <string name="err_no_data">Cannot get the required survey</string>
    <string name="question_iteration_error">Cannot proceed</string>
    <string name="survey_incomplete">Please complete all the questions</string>
    <string name="options_not_entered_err">Please provide valid options</string>
    <string name="gps_connection_err">Error connection GPS. Make sure GPS is enable on the device.</string>
    <string name="error_init">Initializing error. Do you want to retry?</string>
    <string name="gps_error_title">Error recording gps</string>
    <string name="error_saving_survey">Error saving the survey</string>
    <string name="cannot_go_back">Cannot go back</string>
    <string name="cannot_get_data">Error fetching the survey</string>
    <string name="no_network">No network available</string>
    <string name="file_not_exist">File not found</string>
    <string name="invalid_data">Invalid survey</string>

    <!--others tamil translation-->
    <string name="next_ta">அடுத்த</string>
    <string name="back_ta">முன்னாடி</string>
    <string name="no_ta">இல்லை</string>
    <string name="yes_ta">ஆம்</string>
    <string name="dummy_question_ta">1.1\nஉங்களுடைய சர்வேயர் குறியீட்டை பதிவு செய்யவும்</string>
    <string name="dummy_option_ta">விருப்பம்</string>
    <string name="press_ta">அழுத்து</string>
</resources>
